tests/type-check/bad/data-as-object-extend-ref.arr
data Foo:
  | bar(a :: Number, ref b :: String)
end

bar(1, "a").{c: "a"}